--- a/docs/get-started/index.yml
+++ b/docs/get-started/index.yml
@@ -1,10 +1,4 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: e8027a8da47f7e4d81173f578b1ed6306897c1e1
-ms.sourcegitcommit: 235d974c14ad3ffa7a3b29dec3e320a52fb291b2
-ms.translationtype: HT
-ms.contentlocale: it-IT
-ms.lasthandoff: 12/15/2018
-ms.locfileid: "56890914"
 documentType: LandingData
 title: Visual Studio | C++
 metadata:
@@ -15,71 +9,71 @@ metadata:
   ms.date: 12/11/2018
   ms.author: corob
 sections:
-- title: Introduzione
-  items:
-  - type: list
-    style: cards
-    className: cardsM
-    columns: 3
+  - title: Introduzione
     items:
-    - href: ../build/vscpp-step-0-installation.md
-      html: <p></p>
-      image:
-        src: https://docs.microsoft.com/media/common/i_setup.svg
-      title: Installare Visual Studio con C++
-    - href: visual-studio-ide-cpp.md
-      html: <p></p>
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_visual-studio.svg
-      title: Avviare una presentazione guidata
-- title: Esercitazioni su C++
-  items:
-  - type: list
-    style: cards
-    className: cardsM
-    columns: 3
+      - type: list
+        style: cards
+        className: cardsM
+        columns: 3
+        items:
+          - href: ../build/vscpp-step-0-installation.md
+            html: <p></p>
+            image:
+              src: 'https://docs.microsoft.com/media/common/i_setup.svg'
+            title: Installare Visual Studio con C++
+          - href: visual-studio-ide-cpp.md
+            html: <p></p>
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_visual-studio.svg'
+            title: Avviare una presentazione guidata
+  - title: Esercitazioni su C++
     items:
-    - href: tutorial-console-cpp.md
-      html: <p></p>
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_Cplusplus.svg
-      title: Creare la prima app C++
-    - href: /windows/uwp/cpp-and-winrt-apis/get-started
-      html: <p></p>
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_Windows.svg
-      title: Creare un'app universale di Windows
-    - href: /cpp/windows/walkthrough-creating-windows-desktop-applications-cpp
-      html: <p></p>
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_Windows.svg
-      title: Creare un'app desktop di Windows
-    - href: /windows/uwp/gaming/tutorial--create-your-first-uwp-directx-game
-      html: <p></p>
-      image:
-        src: https://docs.microsoft.com/media/common/i_get-started.svg
-      title: Creare un gioco UWP con DirectX
-- title: Informazioni su Visual Studio
-  items:
-  - type: paragraph
-    text: Informazioni su come usare Visual Studio per le attività di sviluppo.
-  - type: list
-    style: cards
-    className: cardsM
-    columns: 3
+      - type: list
+        style: cards
+        className: cardsM
+        columns: 3
+        items:
+          - href: tutorial-console-cpp.md
+            html: <p></p>
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_Cplusplus.svg'
+            title: Creare la prima app C++
+          - href: /windows/uwp/cpp-and-winrt-apis/get-started
+            html: <p></p>
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_Windows.svg'
+            title: Creare un'app universale di Windows
+          - href: /cpp/windows/walkthrough-creating-windows-desktop-applications-cpp
+            html: <p></p>
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_Windows.svg'
+            title: Creare un'app desktop di Windows
+          - href: /windows/uwp/gaming/tutorial--create-your-first-uwp-directx-game
+            html: <p></p>
+            image:
+              src: 'https://docs.microsoft.com/media/common/i_get-started.svg'
+            title: Creare un gioco UWP con DirectX
+  - title: Informazioni su Visual Studio
     items:
-    - href: /visualstudio/get-started/tutorial-editor
-      html: <p></p>
-      image:
-        src: https://docs.microsoft.com/media/common/i_code-edit.svg
-      title: Scrivere e modificare il codice
-    - href: /visualstudio/ide/compiling-and-building-in-visual-studio.md
-      html: <p></p>
-      image:
-        src: https://docs.microsoft.com/media/common/i_build.svg
-      title: Compilare
-    - href: /visualstudio/debugger/getting-started-with-the-debugger-cpp
-      html: <p></p>
-      image:
-        src: https://docs.microsoft.com/media/common/i_debug.svg
-      title: Eseguire il debug del codice
+      - type: paragraph
+        text: Informazioni su come usare Visual Studio per le attività di sviluppo.
+      - type: list
+        style: cards
+        className: cardsM
+        columns: 3
+        items:
+          - href: /visualstudio/get-started/tutorial-editor
+            html: <p></p>
+            image:
+              src: 'https://docs.microsoft.com/media/common/i_code-edit.svg'
+            title: Scrivere e modificare il codice
+          - href: /visualstudio/ide/compiling-and-building-in-visual-studio.md
+            html: <p></p>
+            image:
+              src: 'https://docs.microsoft.com/media/common/i_build.svg'
+            title: Compilare
+          - href: /visualstudio/debugger/getting-started-with-the-debugger-cpp
+            html: <p></p>
+            image:
+              src: 'https://docs.microsoft.com/media/common/i_debug.svg'
+            title: Eseguire il debug del codice
