--- a/docs/linux/toc.yml
+++ b/docs/linux/toc.yml
@@ -2,14 +2,14 @@
   href: index.md
 - name: 'Scaricare, installare e configurare il carico di lavoro per lo sviluppo di applicazioni Linux'
   href: download-install-and-setup-the-linux-development-workload.md
-- name: Configurare un progetto Linux
-  href: configure-a-linux-project.md
-- name: Configurare un progetto CMake per Linux
-  href: cmake-linux-project.md
-- name: Creare un nuovo progetto Linux
-  href: create-a-new-linux-project.md
 - name: Connettersi al computer Linux remoto
   href: connect-to-your-remote-linux-computer.md
+- name: Creare un nuovo progetto Linux
+  href: create-a-new-linux-project.md
+- name: Configurare un progetto Linux
+  href: configure-a-linux-project.md
+- name: Creare e configurare un progetto CMake per Linux
+  href: cmake-linux-project.md
 - name: Configurare i progetti Linux per l'uso di Address Sanitizer
   href: linux-asan-configuration.md
 - name: 'Distribuire, eseguire e sottoporre a debug il progetto Linux'
