commit translated contents

--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -93,6 +93,8 @@
           href: build/cmake-projects-in-visual-studio.md
         - name: 'Esercitazione: Creare progetti multipiattaforma C++ in Visual Studio'
           href: build/get-started-linux-cmake.md
+        - name: Clang/LLVM nei progetti CMake
+          href: build/clang-support-cmake.md
         - name: Configurare un progetto CMake per Linux
           href: build/../linux/cmake-linux-project.md
         - name: Personalizzare le impostazioni di compilazione di CMake
@@ -2796,10 +2798,10 @@
           items:
             - name: Sincronizzazione (classe lock)
               href: dotnet/synchronization-lock-class.md
-            - name: blocco
+            - name: lock
               expanded: false
               items:
-                - name: blocco
+                - name: lock
                   href: dotnet/lock.md
                 - name: Classe lock
                   href: dotnet/lock-class.md
@@ -6178,7 +6180,7 @@
                   href: windows/attributes/bindable.md
                 - name: call_as
                   href: windows/attributes/call-as.md
-                - name: maiuscole e minuscole
+                - name: case
                   href: windows/attributes/case-cpp.md
                 - name: coclass
                   href: windows/attributes/coclass.md
@@ -8358,14 +8360,14 @@
                   items:
                     - name: <algorithm>
                       href: standard-library/algorithm.md
-                    - name: 'Funzioni<algorithm> '
+                    - name: Funzioni<algorithm>
                       href: standard-library/algorithm-functions.md
                 - name: <allocators>
                   expanded: false
                   items:
                     - name: <allocators>
                       href: standard-library/allocators-header.md
-                    - name: 'Funzioni<allocators> '
+                    - name: Funzioni<allocators>
                       href: standard-library/allocators-functions.md
                     - name: Operatori <allocators>
                       href: standard-library/allocators-operators.md
@@ -8414,7 +8416,7 @@
                   items:
                     - name: <array>
                       href: standard-library/array.md
-                    - name: 'Funzioni<array> '
+                    - name: Funzioni<array>
                       href: standard-library/array-functions.md
                     - name: Operatori <array>
                       href: standard-library/array-operators.md
@@ -8429,7 +8431,7 @@
                       href: standard-library/atomic-structure.md
                     - name: Struct atomic_flag
                       href: standard-library/atomic-flag-structure.md
-                    - name: 'Funzioni<atomic> '
+                    - name: Funzioni<atomic>
                       href: standard-library/atomic-functions.md
                     - name: Enumerazioni <atomic>
                       href: standard-library/atomic-enums.md
@@ -8459,7 +8461,7 @@
                   items:
                     - name: <chrono>
                       href: standard-library/chrono.md
-                    - name: 'Funzioni<chrono> '
+                    - name: Funzioni<chrono>
                       href: standard-library/chrono-functions.md
                     - name: Operatori <chrono>
                       href: standard-library/chrono-operators.md
@@ -8507,7 +8509,7 @@
                   items:
                     - name: <complex>
                       href: standard-library/complex.md
-                    - name: 'Funzioni<complex> '
+                    - name: Funzioni<complex>
                       href: standard-library/complex-functions.md
                     - name: Operatori <complex>
                       href: standard-library/complex-operators.md
@@ -8565,7 +8567,7 @@
                   items:
                     - name: <deque>
                       href: standard-library/deque.md
-                    - name: 'Funzioni<deque> '
+                    - name: Funzioni<deque>
                       href: standard-library/deque-functions.md
                     - name: Operatori <deque>
                       href: standard-library/deque-operators.md
@@ -8576,7 +8578,7 @@
                   items:
                     - name: <exception>
                       href: standard-library/exception.md
-                    - name: 'Funzioni<exception> '
+                    - name: Funzioni<exception>
                       href: standard-library/exception-functions.md
                     - name: Typedef <exception>
                       href: standard-library/exception-typedefs.md
@@ -8591,7 +8593,7 @@
                       href: standard-library/filesystem.md
                     - name: Operatori <filesystem>
                       href: standard-library/filesystem-operators.md
-                    - name: 'Funzioni<filesystem> '
+                    - name: Funzioni<filesystem>
                       href: standard-library/filesystem-functions.md
                     - name: Enumerazioni <filesystem>
                       href: standard-library/filesystem-enumerations.md
@@ -8640,7 +8642,7 @@
                   items:
                     - name: <functional>
                       href: standard-library/functional.md
-                    - name: 'Funzioni<functional> '
+                    - name: Funzioni<functional>
                       href: standard-library/functional-functions.md
                     - name: Operatori <functional>
                       href: standard-library/functional-operators.md
@@ -8725,7 +8727,7 @@
                   items:
                     - name: <future>
                       href: standard-library/future.md
-                    - name: 'Funzioni<future> '
+                    - name: Funzioni<future>
                       href: standard-library/future-functions.md
                     - name: Enumerazioni <future>
                       href: standard-library/future-enums.md
@@ -8785,14 +8787,14 @@
                   items:
                     - name: <iomanip>
                       href: standard-library/iomanip.md
-                    - name: 'Funzioni<iomanip> '
+                    - name: Funzioni<iomanip>
                       href: standard-library/iomanip-functions.md
                 - name: <ios>
                   expanded: false
                   items:
                     - name: <ios>
                       href: standard-library/ios.md
-                    - name: 'Funzioni<ios> '
+                    - name: Funzioni<ios>
                       href: standard-library/ios-functions.md
                     - name: Typedef <ios>
                       href: standard-library/ios-typedefs.md
@@ -8811,7 +8813,7 @@
                   items:
                     - name: <istream>
                       href: standard-library/istream.md
-                    - name: 'Funzioni<istream> '
+                    - name: Funzioni<istream>
                       href: standard-library/istream-functions.md
                     - name: Operatori <istream>
                       href: standard-library/istream-operators.md
@@ -8826,7 +8828,7 @@
                   items:
                     - name: <iterator>
                       href: standard-library/iterator.md
-                    - name: 'Funzioni<iterator> '
+                    - name: Funzioni<iterator>
                       href: standard-library/iterator-functions.md
                     - name: Operatori <iterator>
                       href: standard-library/iterator-operators.md
@@ -8889,7 +8891,7 @@
                   items:
                     - name: <locale>
                       href: standard-library/locale.md
-                    - name: 'Funzioni<locale> '
+                    - name: Funzioni<locale>
                       href: standard-library/locale-functions.md
                     - name: Classe codecvt
                       href: standard-library/codecvt-class.md
@@ -8954,7 +8956,7 @@
                   items:
                     - name: <map>
                       href: standard-library/map.md
-                    - name: 'Funzioni<map> '
+                    - name: Funzioni<map>
                       href: standard-library/map-functions.md
                     - name: Operatori <map>
                       href: standard-library/map-operators.md
@@ -8969,7 +8971,7 @@
                   items:
                     - name: <memory>
                       href: standard-library/memory.md
-                    - name: 'Funzioni<memory> '
+                    - name: Funzioni<memory>
                       href: standard-library/memory-functions.md
                     - name: Operatori <memory>
                       href: standard-library/memory-operators.md
@@ -9002,7 +9004,7 @@
                   items:
                     - name: <mutex>
                       href: standard-library/mutex.md
-                    - name: 'Funzioni<mutex> '
+                    - name: Funzioni<mutex>
                       href: standard-library/mutex-functions.md
                     - name: Struct adopt_lock_t
                       href: standard-library/adopt-lock-t-structure.md
@@ -9029,7 +9031,7 @@
                   items:
                     - name: <new>
                       href: standard-library/new.md
-                    - name: 'Funzioni<new> '
+                    - name: Funzioni<new>
                       href: standard-library/new-functions.md
                     - name: Typedef <new>
                       href: standard-library/new-typedefs.md
@@ -9044,7 +9046,7 @@
                   items:
                     - name: <numeric>
                       href: standard-library/numeric.md
-                    - name: 'Funzioni<numeric> '
+                    - name: Funzioni<numeric>
                       href: standard-library/numeric-functions.md
                 - name: <ostream>
                   expanded: false
@@ -9053,7 +9055,7 @@
                       href: standard-library/ostream.md
                     - name: Classe basic_ostream
                       href: standard-library/basic-ostream-class.md
-                    - name: 'Funzioni<ostream> '
+                    - name: Funzioni<ostream>
                       href: standard-library/ostream-functions.md
                     - name: Operatori <ostream>
                       href: standard-library/ostream-operators.md
@@ -9075,7 +9077,7 @@
                   items:
                     - name: <random>
                       href: standard-library/random.md
-                    - name: 'Funzioni<random> '
+                    - name: Funzioni<random>
                       href: standard-library/random-functions.md
                     - name: Classe bernoulli_distribution
                       href: standard-library/bernoulli-distribution-class.md
@@ -9140,7 +9142,7 @@
                   items:
                     - name: <regex>
                       href: standard-library/regex.md
-                    - name: 'Funzioni<regex> '
+                    - name: Funzioni<regex>
                       href: standard-library/regex-functions.md
                     - name: Operatori <regex>
                       href: standard-library/regex-operators.md
@@ -9180,7 +9182,7 @@
                   items:
                     - name: <set>
                       href: standard-library/set.md
-                    - name: 'Funzioni<set> '
+                    - name: Funzioni<set>
                       href: standard-library/set-functions.md
                     - name: Operatori <set>
                       href: standard-library/set-operators.md
@@ -9195,7 +9197,7 @@
                   items:
                     - name: <sstream>
                       href: standard-library/sstream.md
-                    - name: 'Funzioni<sstream> '
+                    - name: Funzioni<sstream>
                       href: standard-library/sstream-functions.md
                     - name: Typedef <sstream>
                       href: standard-library/sstream-typedefs.md
@@ -9253,7 +9255,7 @@
                   items:
                     - name: <string>
                       href: standard-library/string.md
-                    - name: 'Funzioni<string> '
+                    - name: Funzioni<string>
                       href: standard-library/string-functions.md
                     - name: Operatori <string>
                       href: standard-library/string-operators.md
@@ -9325,7 +9327,7 @@
                   items:
                     - name: <thread>
                       href: standard-library/thread.md
-                    - name: 'Funzioni<thread> '
+                    - name: Funzioni<thread>
                       href: standard-library/thread-functions.md
                     - name: Operatori <thread>
                       href: standard-library/thread-operators.md
@@ -9338,7 +9340,7 @@
                   items:
                     - name: <tuple>
                       href: standard-library/tuple.md
-                    - name: 'Funzioni<tuple> '
+                    - name: Funzioni<tuple>
                       href: standard-library/tuple-functions.md
                     - name: Operatori <tuple>
                       href: standard-library/tuple-operators.md
@@ -9581,7 +9583,7 @@
                   items:
                     - name: <utility>
                       href: standard-library/utility.md
-                    - name: 'Funzioni<utility> '
+                    - name: Funzioni<utility>
                       href: standard-library/utility-functions.md
                     - name: Operatori <utility>
                       href: standard-library/utility-operators.md
@@ -9594,7 +9596,7 @@
                   items:
                     - name: <valarray>
                       href: standard-library/valarray.md
-                    - name: 'Funzioni<valarray> '
+                    - name: Funzioni<valarray>
                       href: standard-library/valarray-functions.md
                     - name: Operatori <valarray>
                       href: standard-library/valarray-operators.md
@@ -9636,7 +9638,7 @@
                               href: standard-library/vector-bool-reference-operator-bool.md
                             - name: 'vector<bool>::reference::operator='
                               href: standard-library/vector-bool-reference-operator-assign.md
-                    - name: 'Funzioni<vector> '
+                    - name: Funzioni<vector>
                       href: standard-library/vector-functions.md
                     - name: Operatori <vector>
                       href: standard-library/vector-operators.md
