--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -536,6 +536,10 @@
                       href: build/reference/errorreport-report-internal-compiler-errors.md
                     - name: /execution/charset (Imposta il set di caratteri di esecuzione)
                       href: build/reference/execution-charset-set-execution-character-set.md
+                    - name: '/experimental:module'
+                      href: build/reference/experimental-module.md
+                    - name: '/experimental:preprocessor'
+                      href: build/reference/experimental-preprocessor.md
                     - name: /F (Imposta la dimensione dello stack)
                       href: build/reference/f-set-stack-size.md
                     - name: Opzioni del file di output (/F)
